# ChangeLog for dev-libs/libksba
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.170 2015/05/16 04:58:33 jer Exp $

  16 May 2015; Jeroen Roovers <jer@gentoo.org> libksba-1.3.3.ebuild:
  Stable for HPPA (bug #546464).

  16 May 2015; Jeroen Roovers <jer@gentoo.org> libksba-1.3.3.ebuild:
  Stable for PPC64 (bug #546464).

  15 May 2015; Pacho Ramos <pacho@gentoo.org> libksba-1.3.3.ebuild:
  ppc stable wrt bug #546464

*libksba-1.3.3 (13 Apr 2015)

  13 Apr 2015; Alon Bar-Lev <alonbl@gentoo.org> +libksba-1.3.3.ebuild:
  Version bump, bug#546464

  09 Apr 2015; Alon Bar-Lev <alonbl@gentoo.org> -files/libksba-1.3.0-aix.patch:
  Remove leftover patch, thanks to Hanno Boeck

  28 Feb 2015;  <tgall@gentoo.org> libksba-1.3.2.ebuild:
  stable on arm64

  06 Dec 2014; Kristian Fiskerstrand <k_f@gentoo.org> -libksba-1.3.0.ebuild:
  Cleanup old for security bug #530634

  06 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libksba-1.3.2.ebuild:
  Stable for ia64, wrt bug #530634

  03 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libksba-1.3.2.ebuild:
  Stable for ppc, wrt bug #530634

  02 Dec 2014; Markus Meier <maekke@gentoo.org> libksba-1.3.2.ebuild:
  arm stable, bug #530634

  02 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libksba-1.3.2.ebuild:
  Stable for alpha, wrt bug #530634

  01 Dec 2014; Agostino Sarubbo <ago@gentoo.org> libksba-1.3.2.ebuild:
  Stable for sparc, wrt bug #530634

  29 Nov 2014; Agostino Sarubbo <ago@gentoo.org> libksba-1.3.2.ebuild:
  Stable for ppc64, wrt bug #530634

  28 Nov 2014; Agostino Sarubbo <ago@gentoo.org> libksba-1.3.2.ebuild:
  Stable for x86, wrt bug #530634

  28 Nov 2014; Agostino Sarubbo <ago@gentoo.org> libksba-1.3.2.ebuild:
  Stable for amd64, wrt bug #530634

  26 Nov 2014; Jeroen Roovers <jer@gentoo.org> libksba-1.3.2.ebuild:
  Stable for HPPA (bug #530634).

  26 Nov 2014; Tim Harder <radhermit@gentoo.org> libksba-1.3.0.ebuild,