@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install
+DEPEND=>=dev-libs/glib-2.28:2 dev-libs/libnl systemd? ( sys-apps/systemd:0 ) >=sys-apps/dbus-1.2.24
+DESCRIPTION=Near Field Communication (NFC) management daemon
+EAPI=5
+HOMEPAGE=https://01.org/linux-nfc/
+IUSE=tools systemd
+KEYWORDS=~amd64 ~arm ~x86
+LICENSE=GPL-2
+RDEPEND=>=dev-libs/glib-2.28:2 dev-libs/libnl systemd? ( sys-apps/systemd:0 ) >=sys-apps/dbus-1.2.24
+SLOT=0
+SRC_URI=mirror://kernel/linux/network/nfc/neard-0.15.tar.xz
+_md5_=b9bc454249ba0b333378ea940bf34b84
