@@ -16,13 +16,23 @@ AUX hostapd.service 213 SHA256 16f0612c192fb5d7e7de716f25fdfc2ccecc35a00ff745ae6
 DIST hostapd-2.0.tar.gz 1376203 SHA256 262ce394b930bccc3d65fb99ee380f28d36444978f524c845a98e8e29f4e9d35 SHA512 25fddaaddb22903078cfaae29a1e955b60955f9f5542b52962a6a8d4c65146ca102e9ac085118ce422843c55349a74a019220dfd4926895e301d506dbc97b967 WHIRLPOOL e5ae2e760770d2f307b1c4235c9b0c9d25e1719a1d174efa30ce6bbbc07b5c46d5f7babc087b8f450f3b485fb640728ddd23761fb292bcd535ef38dc10ac1d45
 DIST hostapd-2.4.tar.gz 1658872 SHA256 6fe0eb6bd1c9cbd24952ece8586b6f7bd14ab358edfda99794e79b9b9dbd657f SHA512 37e648fe9cce92923ab1d1e23a4267e274c988785d7be5610f1affca425ffa86b438de81e37446926a0f9158d6b67ee83e6396c3f81d571545c973dddbf1ffe3 WHIRLPOOL 78484c7e09725ba967c8815c3d8b0ffcc0c56daaec4acc79bc15c7392084c8642a2b41156b2c6a6360badb7e9d23792699d452fe600b56e3d62dd569188b6c2c
 EBUILD hostapd-2.0-r1.ebuild 5283 SHA256 91a76c256b5b27043f159cbe40534e6b487751bc63c593aca55a298088541836 SHA512 ac30eaeb3754e77916a0f7f75124324f2e424af3e0e50ea1381ce0c9e2127d568f040f14dce21b877840721d12dae20e42119b26d3cce847976c41c48286a484 WHIRLPOOL afcdc6ce3ed32b1223716fea94b04f4ac6a18c6a1bacbfb1b92f2bcf9e733584454fa27b20287faf9d7a5fb70f0c9e988924d9c20608c763dff01ad2870ef7d5
-EBUILD hostapd-2.4-r2.ebuild 6116 SHA256 7f08d2543f294b0404080f91a48e18ec71ef442226e8d57ca5292eae3813f3b3 SHA512 e18f9cc42f47fcf5dbcc37abff393026c86fb33a72b52edbd9ff1b0372fb024e7c9afd4d5ad440c41d83782d4e898fc5fb14598c8bf2166007e95fbb5ad4bc45 WHIRLPOOL e9129cb5e1678c516b9cd657177fcd3c474859aed8d97d3b3b208a4878a906ea191989705c3ee044c34fecbf83e1e001fc08ec8eedf5bd8ee9104e822c6ac117
-MISC ChangeLog 27895 SHA256 98459102f0162297b4ba534a64afe88dadc81f5b9a5d866c0e5244cc7556b521 SHA512 6b32e4443fea76d445efe4273670c70f54b31586e63fea63ca7bcfbd9a68a21783f7bec7562052b012cb24879dfbfbc0850e319518f3df9d73c621af8d418110 WHIRLPOOL a4307735347118e04c1bcaded299b03d735a37d8c8c089194b8490b3459a8e7f87ef5d609c27653e2e0c22c7e83f1d6b5beb707c7bcca7eac7daea0da2779711
+EBUILD hostapd-2.4-r2.ebuild 6113 SHA256 cf79bb1be3ffa6f7ed73f861e330d05980693149a84155f194e9a1f9e377e43d SHA512 d32faddc41c6afe6f3487ccb71c58309ca6f5bcaecf17d1ef23a7ffd44ca0534b97045c3ef36c6bdded3267254ed96a71a8ab68f9eb8cbdb00ea1b22e9d45236 WHIRLPOOL 2c94a32070d511201e9a3836e457d78ecdfa96f37294e24e63cc7313a413db6b44d8c5f2eb9f264620377574622fabf49d597a7fb0b6414d58c9ff96a6984153
+MISC ChangeLog 28002 SHA256 a7eff1ba7aa1ba78c1c45af8f16142064ab0176019c518ecaa5ed018d11a0767 SHA512 c9d34a096de12d3eebaf08e7d62cb1b74a4c35553fe6d19dff87883012d6e642a6129ccf84c1fa429759bcd7fc4b88114c78316457d6623be0488dadf75cd27f WHIRLPOOL 989a33ed302262a4e3b785aaf009f97031c1d1e9eeeac1094e05f69c2456a164d0dd7fed295f1dd7621b34802271e23da4a30b252be509d1c80c8b4b9dea307a
 MISC metadata.xml 860 SHA256 61963f6bf5911c90a644c8fd09477b1ceb5f7617e2f9521517d88b899e0021f0 SHA512 6706de2fdcadc5f7619cf2a42d349a5061a8fa1c7fa00c05bac0fe14583d6b5d99211e697c5255957f315c0de66dd10fbff6e450516321511e3fa7c9e4439d6b WHIRLPOOL dcdf07c188a486c59edd7d055f446575cf5162b06dc83a99fc60f2d261532a3f3e0438dbe9b8c3213913bef443898f79a5b61022fe6d6a9cd6d360bab2057fd4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVV1jwACgkQCaWpQKGI+9TlaQCfS/h0a6JCXP6UTxXo1v73Sg+W
-jcUAn2G8CCq3fbytNna6qYPJMHzqO3Kf
-=ojF3
+iQIcBAEBCAAGBQJVWabJAAoJELp701BxlEWfhPEQAL8hsvD7VTuQAczMjpOayrKl
+k8PB7YIF0V5XsCqS1j2cXacus1Cq8u0NJYCBkubRGGNEdbHG5hbiMKrdCnJevf2J
+YmD1f4nHlIHog0WnqBe3UqS8+toLccCf3sV78uagEbxvH0PeuDneVhdat9bXnJI1
+n0wFvAbiq8wtla7LwCApFsoi139IlyIGA3uqjurrZfH4L7L4AseQd61RM/jopCh8
+auJUUB+pab9LzoAOmoDYzo5QXgaE5SN+zFbdb5xKX68pq6bgqw8ZnT7Voo8ywSvp
+vGJtxJedsDRzBURR3QgufSR+c247CwHcgPYgNpeHpbxCniCxnjilirGN0wiPrqQz
+P58tN6hkKNRHreeVu35MdZHvMWiNsQysCvOS7oUE6Ob/4Pmi7VEyUdfzaI4ObZ2l
+DpsBZFm2Glyua54HA44shJhxxZpQW6zfuIVRLjwy7enuBVqQekIsoNbTwXKoQL4q
+UGpvPKfqwXh4cP+NGT9WCiTxyQFcn+T5hx+hsYa/W5IOnSpgXagSzuc0f1WMGJR4
+Sw8M2EEqTY7pVNs1BgLp3/8VlpS6p7GS/RzWW1zSKJKvrWxMwiPaw9zlSsjfYLq/
+mqT9/PcON10Hv8h25TrlUVVIJk9vwEdgVc2rpvBjHBp+gKXe3HXSImuRD2BhdZxH
+r/m6rEPkrQcwtoVtVD63
+=gq7m
 -----END PGP SIGNATURE-----
