@@ -1,8 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX neard.confd 274 SHA256 b270962de5e81ba92d401d65f4826636568f9adbde3863a564b619205095693c SHA512 d696911f7e5f33f6b2a0f6508c73676998a3bfaebbda02386dc08d9149d525bf211bfcf9836276d070f31288ef84540ef1bce3d68119d4439089297c079392ef WHIRLPOOL 90c8dd989f438d813077dbe4e0c8db8e0d3c41b35bbaf0fc00d5b499326b606eff0cbb8b2c2370ce5659fd094fe60c9249cc33099418ed41415054eba0f0ec17
 AUX neard.rc 525 SHA256 df6f500b1e4eb113dc1d0a4c18c62c4007c8559ef5206d1425d88d1079b653f6 SHA512 fb461dc3b8173ea6282357e39f3c4639784b7221fddda8c9b50799ded85ec60eb2fa1ccd516558e97a9e7840beab29b9c613950f7ee872c7ab0433207409bbc1 WHIRLPOOL 3a72602a712792f21ca61ab381eacd00c9f3bb38bc24d143e7da152b365a61f3401e6b6927560c5b5a95603cd9fc7e1679beb4b64d661fb7fbc6b387445be33b
 DIST neard-0.11.tar.xz 330192 SHA256 6c802ac1f74051ea078e5aa0d1d01ee83fc2f8e5cd41444d76669a090d1b356d SHA512 485098e0eb2d3daecc9732cd134e14d874c2ace725251db1813d841e1949fac493b8dc7dde62079fd41f429eb76463733b7be8d7e4d7b441ea93c9b0161d3f05 WHIRLPOOL 811fcd1f7210798bf62b5a7a8db1607f8768707d4bfc204c855ef94b3df1d6486d20761140e2f233c37a9ba78ad1f0d7a2a48046bc9a775c6799226ff4cc6289
 DIST neard-0.13.tar.xz 342872 SHA256 f5b849b863e43b06fa6bbc5fefb6638dc426769738f43eee159c90e696ac20f5 SHA512 ae59c5b2cae553457151935273f604671e842cba6d239af6ae12be62c621240fb35bb70858d2ab87b7062ee041e21ba0af20c8bd6637cc2484b151bc56dd9982 WHIRLPOOL 713540c16bd915bcf2561e4f7b84fd43b61455cd7900583611222d5c5da11d6538eb4c090d729643823e13d6de17d97646fbebbd6664cc920a13d86e2e69197a
+DIST neard-0.15.tar.xz 368196 SHA256 651f6513d32cdaf8a426255d03aff38a6620a89b0567ec2b36606c6330a93353 SHA512 daaa001a305f0d200bb03bf614c938256fa5c07d480bf820d5e83da80d930e060b5bb6a09234f1c3f7ecbd3cb0af378a1de675dd4dcd99b728677430e0cd111d WHIRLPOOL e066ec628760275866ae0ba8d5dbea68784c00963dcc5f1dbea8352c45098b34835ce609665ded9f15b266998902069370c9c0a2947ee46cbd6220ae79c1e513
 EBUILD neard-0.11.ebuild 704 SHA256 ca5ef3ebdaf1212d581979fbb92704cd5adecf32980c64406bd6271847bc57cb SHA512 eb381e52f116741543705238f6310fafea17d552e3a8e48d30b0a7e677575e5279ef84b853548ecff610ef30c6c95f5afc2e7e589af0605dffc71b88d7bf30a7 WHIRLPOOL 7018d4045525aa35e1951434e02310d5f7daa638bd3064a9dbcf7dab50d969836c29d8001da09e406f2cafcccf0cbea933f8315cf70bb7cb6078dc563e01038b
 EBUILD neard-0.13.ebuild 701 SHA256 620f3a9c41f3be728c3cb4262a25a1b665e6190a2192b9fe8dc41ca6439c67d7 SHA512 051071a2b34ec96ba4da01ff4f346401d8f674ecb44cd9a1fc28a7aae175d965c30330c999a47f73242436fb6f0f0e899739b0ee4b09dd9ce2f011216c6e72ea WHIRLPOOL 824a7ba01d74e02e7baa4412c502ac58d428a3e9f3456993daa3bd0434b3194977125f9510fc134f3a3390bdc32b1911225fa1cdaaca7ff8a0e6a58997304f1d
-MISC ChangeLog 553 SHA256 f99319c3e2cecafcf4757b52478b008cdc89f2724878aa31c7b5ebd83e55b740 SHA512 3c82ffbacfd8f3e7a742fd1f0e9540aa76c2f56af25889146796fa516baaddc68ef909208f78bcadf9970743d74dcdfabdafdcca7f5ed5ad2f4bcb459679cdfb WHIRLPOOL 840a0b129b4c4eef65aa62db8ebce20907ef66404b725bd2ab175aa6e8942e7d78ae60f264169844417871645a644bdf11104c501a094bdfc4f7fbba5adcd883
+EBUILD neard-0.15.ebuild 768 SHA256 325405fce381106f3d6524f831a4fd8a770fc8156d7525e93389054a920967eb SHA512 35dd7fa13fa54af3d6fe6f9e00974e3b546f3b28f245a8a97eeb6768ae6b87ff39d09fc6a48acf003502e636c28fc8fa5b398232b3fd9ac97c5c24aebe51b71a WHIRLPOOL 2804faf3a2559457ce62671bf4374ef4542508bc2b31c14ec3a55f247e965a3f5ed9612985c2f7dbf58b7f6fb331d7b6e519eba23cd9942966805231c7cb2b1f
+MISC ChangeLog 743 SHA256 560f7d3fd2f19cb406bc437cc016ab731a00120eec95f65cce133ff6a69a38e8 SHA512 eeb9150ee400fc94a2353ae8e83b4644d45957f229e971dd5935f8f88c2a97066cfb0e01c291d4d32c9d7517694da93e140631e57f273a621992450dcc58f45f WHIRLPOOL 4801ea3d9cdb26342c893d1b491d38d7cf0deefcd1e4746d0507221d8890f4edb03b828f31aa91d3973d6b3aa57eac2733d82d34bbeed199ae2f798ae7bc9e3f
 MISC metadata.xml 327 SHA256 e3c4ad6c518dbc41b7de93b4559360a83ebc341da6907cc539bfd7f4994ce4e4 SHA512 245d8d352b938d40181da71f9604b14bd3fbf86647d918657bbf3e1b9b2e09ac3d4ba5124525442defaca42d77414c122c035e1cb6a0bedcc68d039bcde1bafa WHIRLPOOL 59ad1d5a6d11777a739601798090e2d010f8e1d109da146fe71c6fbbc58fd22b2987d68627374f00e105cef6c183496187b15910f24723f7efa5b97ba22b136f
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJVWal6AAoJEJGRpfGTSRu4usMIAMF12iQKUnVXTR748ROVIV6C
+406SmFy+klYXoRDJy0IFm1YH9F9KSsSg/p9+jhK7zULp7KjiuJbYb7GVvzeaUXNt
+/N6fq7XxIMwJkRm8XI5128v6POPW8FwlANztTH7pBS0CwuKfbNCaOAa1js6AV5a8
+7U24tghYhUpbZIMft9C0zBoBD035hB8fqxUG2oX4Leq1z4OAhC+ynqnGdyfUvWH6
+mOz94rEgZCby+eEVgsUowX46q15t6iPlgoNKeCkWOcMwGwuOoITed/lcuYUsjhPo
+puHXjxZNLTMmUHOW9P7T2A93AngJXGkMKvoX91VVLhCH7PxuXsuCetTVa5ZynUY=
+=yKtu
+-----END PGP SIGNATURE-----
