@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/neard
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/neard/ChangeLog,v 1.2 2013/09/22 19:07:31 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/neard/ChangeLog,v 1.3 2015/05/18 08:55:28 monsieurp Exp $
+
+*neard-0.15 (18 May 2015)
+
+  18 May 2015; Patrice Clement <monsieurp@gentoo.org> +neard-0.15.ebuild:
+  Version bump courtesy of David Flogeras <dflogeras2@gmail.com>. Fix bug
+  549670.
 
 *neard-0.13 (22 Sep 2013)
 
