@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libksba
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.170 2015/05/16 04:58:33 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libksba/ChangeLog,v 1.171 2015/05/18 08:45:54 ago Exp $
+
+  18 May 2015; Agostino Sarubbo <ago@gentoo.org> libksba-1.3.3.ebuild:
+  Stable for amd64, wrt bug #546464
 
   16 May 2015; Jeroen Roovers <jer@gentoo.org> libksba-1.3.3.ebuild:
   Stable for HPPA (bug #546464).
